--- a/style.css
+++ b/style.css
@@ -97,8 +97,9 @@ body {
 .heroTitle {
   margin: 0 0 20px;
   font-weight: 900;
+  letter-spacing: 0.7px;
   text-transform: uppercase;
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.08;
 }
 
